--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "description": "Your project description here",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "dev": "nodemon index.js",
+    "start": "node index.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -8,15 +17,7 @@
     "mongoose": "^8.4.1",
     "socket.io": "^4.7.5"
   },
-  "name": "server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "dev": "nodemon index.js"
-  },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "author": "Your Name",
+  "license": "ISC"
 }
