changes to script , vercel.json and vite config

--- a/client/vercel.json
+++ b/client/vercel.json
@@ -13,5 +13,8 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
-  ]
+  ],
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
+  "devCommand": "vite"
 }
