--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.16.0",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
