--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,8 +1,3 @@
-   VITE_GEMINI_API=your_gemini_api_key
-   VITE_FIREBASE_API=your_firebase_api_key
-   VITE_FIREBASE_DOMAIN=your_firebase_domain
-   VITE_FIREBASE_PROJECT_ID=your_firebase_project_id
-   VITE_FIREBASE_STORAGE_BUCKET=your_firebase_storage_bucket
-   VITE_FIREBASE_MESSAGING_SENDER_ID=your_firebase_messaging_sender_id
-   VITE_FIREBASE_APP_ID=your_firebase_app_id
-   VITE_FIREBASE_MEASUREMENT_ID=your_firebase_measurement_id
+PORT= Your port number
+MONGODB_URI= your mongoDB URI to connect
+JWT_SECRET=  a random set of characters to safely encrypt JWT tokens
