take url from environment variables

--- a/client/.env.sample
+++ b/client/.env.sample
@@ -6,3 +6,4 @@
    VITE_FIREBASE_MESSAGING_SENDER_ID=your_firebase_messaging_sender_id
    VITE_FIREBASE_APP_ID=your_firebase_app_id
    VITE_FIREBASE_MEASUREMENT_ID=your_firebase_measurement_id
+   VITE_BACKEND_URL=your_backend_url
