--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,3 +1,4 @@
 PORT= Your port number
 MONGODB_URI= your mongoDB URI to connect
 JWT_SECRET=  a random set of characters to safely encrypt JWT tokens
+CORS_FRONTEND_URL= your frontend URL
