added dockerfile and YAML files

--- a/client/.env.sample
+++ b/client/.env.sample
@@ -7,3 +7,4 @@
    VITE_FIREBASE_APP_ID=your_firebase_app_id
    VITE_FIREBASE_MEASUREMENT_ID=your_firebase_measurement_id
    VITE_BACKEND_URL=your_backend_url
+   VITE_GOOGLE_CLIENT_ID=your_google_OAUth_clientID
