env sample instructions

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,6 @@
+#by default it will all run on port 4000, the mentioned variables below are the required to run the application to a basic degree
 MONGODB_URI=mongodb_uri
 JWT_SECRET=random_set_of_characters
 VITE_GOOGLE_CLIENT_ID=google_OAuth_client_id
+
+# Will add support fully in a future commit
